[Karan] Add :  Added Json configuration for Twitter Settings

--- a/TwitterAuth_Backend/TwitterAuth_Backend/appsettings.json
+++ b/TwitterAuth_Backend/TwitterAuth_Backend/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "TwitterSettings": {
+    "AppId": "dARQ0K3Rr4WhCIVuNKvifcWlz",
+    "AppSecret": "bK9UZHvbVYAzPHuTqlFvXgLnfSGNLO332098kdF2dvElbUwcpb"
+  },
   "AllowedHosts": "*"
 }
