[Karan] Refector : Issue Resolved in GetRequestToken method

--- a/TwitterAuth_Backend/TwitterAuth_Backend/TwitterAuth_Backend.csproj
+++ b/TwitterAuth_Backend/TwitterAuth_Backend/TwitterAuth_Backend.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="OAuth.DotNetCore" Version="3.0.1" />
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
 	</ItemGroup>
 
