[Karan] Implement: Implemented Database for storing the twitter user data for future purpose

--- a/TwitterAuth_Backend/TwitterAuth_Backend/appsettings.json
+++ b/TwitterAuth_Backend/TwitterAuth_Backend/appsettings.json
@@ -6,9 +6,12 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    "TwitterDatabase": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=TwitterDatabase;Integrated Security=True;Connect Timeout=30;Encrypt=False;"
+  },
   "TwitterSettings": {
-    "AppId": "dARQ0K3Rr4WhCIVuNKvifcWlz",
-    "AppSecret": "bK9UZHvbVYAzPHuTqlFvXgLnfSGNLO332098kdF2dvElbUwcpb"
+    "AppId": "WxMuVlbUtrqu5fYa3lsEl5eI8",
+    "AppSecret": "98SOdSxQUhRzjpPfTnU4tzAgJ02xXNVhnKIr2YWyYmrytKQcTD"
   },
   "AllowedHosts": "*"
 }
